# API_authentication

Authentication/: .env  Cargo.toml
Authentication/src/: auth.rs  config.rs  firebase_auth.rs  jwt.rs  main.rs  profile.rs  user.rs
