[package]
name = "firebase_auth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "9"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
