[package]
name = "firebase_auth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls"] }
chrono = "0.4"
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
